# command-bar

./: .gitignore  README.md  generate-icons.bat  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
plugins/: README.md  build.js  plugins.rs
plugins/apps/: Cargo.toml  apps_plugin.rs
plugins/clipboard/: Cargo.toml  clipboard_plugin.rs
plugins/color/: Cargo.toml  color_plugin.rs
plugins/emoji/: Cargo.toml  emoji_plugin.rs
plugins/files/: Cargo.toml  files_plugin.rs
plugins/google/: Cargo.toml  google_plugin.rs
plugins/processes/: Cargo.toml  processes_plugin.rs
plugins/shell/: Cargo.toml  shell_plugin.rs
plugins/torrent/: Cargo.toml  torrent_plugin.rs
src/: app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  lib.rs  shortcuts.rs
src-tauri/src/commands/: default.rs  settings.rs
src-tauri/src/plugins/: apps.rs  files.rs  google.rs  loader.rs  mod.rs  processes.rs  youtube.rs
src/lib/: commands.svelte.ts  plugins.ts
src/lib/components/: CommandBar.svelte  Icon.svelte  Settings.svelte
src/lib/stores/: settings.svelte.ts
