[package]
name = "dossier"
version = "2.0.0"
description = "A modern, extensible command launcher built with Tauri 2 and Svelte 5."
authors = ["Alysonhower Veras Vieira"]
license = "MIT"
repository = "alysonhower/dossier"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
sysinfo = "0.36.1"
urlencoding = "2.1"
tauri-plugin-opener = "2"
app-finder = "0.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
libloading = "0.8"
async-trait = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
