[package]
name = "apps-plugin"
version = "1.0.0"
edition = "2021"

[lib]
path = "apps_plugin.rs"
name = "apps_plugin"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
app-finder = "0.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }