[package]
name = "clipboard_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "clipboard_plugin"
path = "clipboard_plugin.rs"
crate-type = ["cdylib"]