[package]
name = "emoji_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
arboard = "3.4"


[lib]
name = "emoji_plugin"
path = "emoji_plugin.rs"
crate-type = ["cdylib"]